--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codespace",
   "version": "0.0.1",
   "description": "",
-  "main": "devio.js",
+  "main": "codespace.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
